@@ -236,6 +236,22 @@ QString Helper::timeForJumps(int secs) {
 }
 
 #ifdef Q_OS_WIN
+// This function has been copied (and modified a little bit) from Scribus (program under GPL license):
+// http://docs.scribus.net/devel/util_8cpp-source.html#l00112
+QString Helper::shortPathName(QString long_path) {
+	QString short_path = long_path;
+	
+	int max_path = 4096;
+	WCHAR shortName[max_path];
+
+	QString nativePath = QDir::convertSeparators(long_path);
+	int ret = GetShortPathNameW((LPCWSTR) nativePath.utf16(), shortName, max_path);
+	if (ret != ERROR_INVALID_PARAMETER && ret < MAX_PATH)
+		short_path = QString::fromUtf16((const ushort*) shortName);
+
+	return short_path;
+}
+
 #if !DISABLE_SCREENSAVER_BY_EVENT
 void Helper::setScreensaverEnabled(bool b) {
 	qDebug("Helper::setScreensaverEnabled: %d", b);
