@@ -69,9 +69,12 @@ public:
 	//! Returns the log (the debugging messages)
 	static QString log();
 
-	//! Enable or disables the screensaver
+
 #ifdef Q_OS_WIN
+	static QString shortPathName(QString long_path);
+	
 #if !DISABLE_SCREENSAVER_BY_EVENT
+	//! Enable or disables the screensaver
 	static void setScreensaverEnabled(bool b);
 #endif
 #endif
