@@ -207,6 +207,7 @@ void Preferences::reset() {
 #ifdef Q_OS_WIN
 	//enable_vcd_on_windows = false;
 	enable_audiocd_on_windows = false;
+	use_short_pathnames = false;
 #endif
 
 	close_on_finish = false;
@@ -400,6 +401,7 @@ void Preferences::save() {
 #ifdef Q_OS_WIN
 	//set->setValue("enable_vcd_on_windows", enable_vcd_on_windows);
 	set->setValue("enable_audiocd_on_windows", enable_audiocd_on_windows);
+	set->setValue("use_short_pathnames", use_short_pathnames);
 #endif
 
 	set->setValue("close_on_finish", close_on_finish);
@@ -604,6 +606,7 @@ void Preferences::load() {
 #ifdef Q_OS_WIN
 	//enable_vcd_on_windows = set->value("enable_vcd_on_windows", enable_vcd_on_windows).toBool();
 	enable_audiocd_on_windows = set->value("enable_audiocd_on_windows", enable_audiocd_on_windows).toBool();
+	use_short_pathnames = set->value("use_short_pathnames", use_short_pathnames).toBool();
 #endif
 
 	close_on_finish = set->value("close_on_finish", close_on_finish).toBool();
