@@ -1,5 +1,14 @@
 [b]Version 0.5.63 (not released yet)[/b]:
 
+(2007-12-20)
+ * (Windows) Added a new option for the config file: use_short_pathnames.
+   If set to true, smplayer will pass to mplayer the short filename(8+3)
+   to mplayer. This allows to play files which contains characters outside 
+   the local codepage (mplayer bug). Currently this only works with the file
+   to play, not with subtitles filenames or other filenames that smplayer 
+   might pass to mplayer.
+   To test: I don't know if this would break compatibility with Win98.
+ 
 (2007-12-18)
  * Moved the letterbox option to the filters submenu and renamed to 
    "Add black borders".
